metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/RavenApps__Grid__c.object-meta.xml
<CustomObject>
    <description>Grid object by RavenApps</description>
    <label>Grid</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>