metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Actions__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Actions__c</fullName>
    <label>Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Filters</fullName>
            </value>
            <value>
                <fullName>Fullscreen</fullName>
            </value>
            <value>
                <fullName>Go To Record</fullName>
            </value>
            <value>
                <fullName>Mass Delete</fullName>
            </value>
            <value>
                <fullName>New Record</fullName>
                <label>New Record (Modal)</label>
            </value>
            <value>
                <fullName>Quick Edit</fullName>
            </value>
            <value>
                <fullName>Quick View</fullName>
            </value>
            <value>
                <fullName>Delete Record</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Sorting</fullName>
            </value>
            <value>
                <fullName>Summaries</fullName>
            </value>
            <value>
                <fullName>New Record Row</fullName>
                <label>New Record (Row)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>