metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Active__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>