metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Cloned_From_Grid__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Cloned_From_Grid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From Grid</label>
    <referenceTo>RavenApps__Grid__c</referenceTo>
    <relationshipLabel>Grid Clones</relationshipLabel>
    <relationshipName>Grid_Clones</relationshipName>
    <type>Lookup</type>
</CustomField>