metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Columns__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Columns__c</fullName>
    <label>Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>