metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__CustomRowAction__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__CustomRowAction__c</fullName>
    <label>Custom Row Action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>