metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Description__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Description__c</fullName>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>