metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Filters__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Filters__c</fullName>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>