metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Grid_Id__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Grid_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grid Id</label>
    <type>Text</type>
</CustomField>