metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Hide_Checkbox_Column__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Hide_Checkbox_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Checkbox Column</label>
    <type>Checkbox</type>
</CustomField>