metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__NewRecordRowDefaults__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__NewRecordRowDefaults__c</fullName>
    <label>New Record Row Defaults</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>