metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>