metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Preview_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Preview_Record_Id__c</fullName>
    <label>Preview Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>