metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Query__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>