metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__RavenAppsId__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__RavenAppsId__c</fullName>
    <externalId>true</externalId>
    <label>RavenAppsId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>