metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__RelatedGrids__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__RelatedGrids__c</fullName>
    <label>Related Grids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>