metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Show_Row_Number_Column__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Show_Row_Number_Column__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Row Number Column</label>
    <type>Checkbox</type>
</CustomField>