metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Sorts__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Sorts__c</fullName>
    <label>Sorts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>