metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Summaries__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Summaries__c</fullName>
    <label>Summaries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>