metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Table_Height__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Table_Height__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Height of data table in pixels (px) unit</inlineHelpText>
    <label>Table Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>