metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__To_Export__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__To_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Export</label>
    <type>Checkbox</type>
</CustomField>