metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Variables__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Variables__c</fullName>
    <label>Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>