metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/fields/RavenApps__Visible_on_Explorer__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Visible_on_Explorer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible on Explorer</label>
    <type>Checkbox</type>
</CustomField>