metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/recordTypes/RavenApps__Customer.recordType-meta.xml
<RecordType>
    <fullName>RavenApps__Customer</fullName>
    <active>false</active>
    <label>Default</label>
</RecordType>