metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/recordTypes/RavenApps__RavenApps.recordType-meta.xml
<RecordType>
    <fullName>RavenApps__RavenApps</fullName>
    <active>false</active>
    <description>Grids managed by RavenApps</description>
    <label>DEPRICATEDRavenApps</label>
</RecordType>