metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/listViews/RavenApps__RavenApps_Sample_Grids.listView-meta.xml
<ListView>
    <fullName>RavenApps__RavenApps_Sample_Grids</fullName>
    <columns>NAME</columns>
    <columns>RavenApps__Object_API_Name__c</columns>
    <columns>RavenApps__Visible_on_Explorer__c</columns>
    <columns>RavenApps__Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RavenApps__RavenAppsId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>*SAMPLE GRIDS - Managed by RavenApps</label>
</ListView>