metadata/sf-prod/force-app/main/default/objects/RavenApps__Grid__c/listViews/RavenApps__Your_Grids.listView-meta.xml
<ListView>
    <fullName>RavenApps__Your_Grids</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Grids</label>
</ListView>